# sir

./: Cargo.toml
sir/: Cargo.toml  Readme.md
sir-macro/: Cargo.toml
sir-macro/src/: compile_style_item.rs  lib.rs
sir/examples/: dioxus_counter.rs
sir/src/: css_collection.rs  css_macro.rs  lib.rs
sir/src/components/: dioxus_components.rs  mod.rs
sir/tests/: basic.rs  registered_once.rs
